# broot

./: .gitignore  CMakeLists.txt  Makefile  README.md
app/: main.cxx
include/: Banalyzer.h  HistoScanner.h
src/: Banalyzer.cxx  HistoScanner.cxx
